<resources>
    <string name="app_name">Ocat</string>
    <string name="find_nearby">Start Discovery</string>
    <string name="stop_nearby">Stop Discovery</string>
    <string name="start_bench">Start sending files</string>
    <string name="receiver">Receiver</string>
    <string name="sender">Sender</string>
    <string name="ending">Benchmark done</string>
    <string name="done">Done</string>
    <string name="select">Select all</string>
    <string name="deselect">Deselect all</string>
    <string name="preset">Default</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
