<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/toolbar_main" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/APIchosen"
            style="@style/BasicText"
            android:layout_width="wrap_content"
            android:text=""
            android:textSize="20sp" />

        <TextView
            android:id="@+id/status"
            style="@style/BasicText"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Loops:"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/numberLoop"
            style="@style/BasicText"
            android:layout_width="wrap_content"
            android:inputType="numberSigned"
            android:text="3"
            android:textSize="25sp" />
        <Spinner
            android:id="@+id/spinnerLos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Distance:"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/distanceField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:text=""
            android:textSize="25sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/commentsField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="Comments"
        android:inputType="textPersonName" />


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/scrollLayout"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:orientation="horizontal"/>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/buttonSelectionFilesLayout"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/selectButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="selectAll"
            android:text="@string/select" />

        <Button
            android:id="@+id/deselectButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="deselectAll"
            android:text="@string/deselect" />

        <Button
            android:id="@+id/presetButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="selectDefault"
            android:text="@string/preset" />
    </LinearLayout>

    <TextView
        android:id="@+id/instantSpeed"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/loopStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/transferBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    <Button
        android:id="@+id/start_benchmark"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendFiles"
        android:text="@string/start_bench" />

    <Button
        android:id="@+id/find_phones"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="findPhones"
        android:text="@string/find_nearby" />
</LinearLayout>